Updated the Old English translation.

--- a/po/wesnoth-editor/ang.po
+++ b/po/wesnoth-editor/ang.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: ang\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2012-01-03 10:40+0100\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
+"POT-Creation-Date: 2012-01-08 18:12+0100\n"
+"PO-Revision-Date: 2011-11-30 16:06-0500\n"
 "Last-Translator: Steven Panek (Espreon) <Majora700@gmail.com>\n"
 "Language-Team: Old English <http://wiki.wesnoth.org/OldEnglishTranslation>\n"
 "Language: ang\n"
@@ -45,7 +45,7 @@ msgstr ""
 #. [editor_group]: id=water
 #: data/core/editor/terrain-groups.cfg:16
 msgid "water"
-msgstr ""
+msgstr "ᚹᚫᛏᛖᚱ"
 
 #. [editor_group]: id=flat
 #: data/core/editor/terrain-groups.cfg:23
@@ -65,22 +65,22 @@ msgstr ""
 #. [editor_group]: id=forest
 #: data/core/editor/terrain-groups.cfg:44
 msgid "forest"
-msgstr ""
+msgstr "ᚹᛠᛚᛞ"
 
 #. [editor_group]: id=frozen
 #: data/core/editor/terrain-groups.cfg:51
 msgid "frozen"
-msgstr ""
+msgstr "ᚷᛖᚠᚱᚩᚱᛖᚾ"
 
 #. [editor_group]: id=rough
 #: data/core/editor/terrain-groups.cfg:58
 msgid "rough"
-msgstr ""
+msgstr "ᚱᚢᚻ"
 
 #. [editor_group]: id=cave
 #: data/core/editor/terrain-groups.cfg:65
 msgid "cave"
-msgstr ""
+msgstr "ᛋᚳᚱᚫᚠ"
 
 #. [editor_group]: id=obstacle
 #: data/core/editor/terrain-groups.cfg:72
@@ -90,7 +90,7 @@ msgstr ""
 #. [editor_group]: id=village
 #: data/core/editor/terrain-groups.cfg:79
 msgid "village"
-msgstr ""
+msgstr "ᚦᚩᚱᛈ"
 
 #. [editor_group]: id=castle
 #: data/core/editor/terrain-groups.cfg:86
@@ -100,7 +100,7 @@ msgstr ""
 #. [editor_group]: id=bridge
 #: data/core/editor/terrain-groups.cfg:93
 msgid "bridge"
-msgstr ""
+msgstr "ᛒᚱᚣᚳᚷ"
 
 #. [editor_group]: id=special
 #: data/core/editor/terrain-groups.cfg:100
@@ -165,7 +165,7 @@ msgstr ""
 #. [label]: id=villages-icon
 #: data/themes/editor.cfg:272
 msgid "villages"
-msgstr ""
+msgstr "ᚦᚩᚱᛈᚪᛋ"
 
 #: src/editor/editor_controller.cpp:132
 msgid "Quit Editor"
@@ -197,7 +197,7 @@ msgstr ""
 
 #: src/editor/editor_controller.cpp:326
 msgid "Quit"
-msgstr ""
+msgstr "ᛚᚫᚠᚪᚾ"
 
 #: src/editor/editor_controller.cpp:391
 msgid "No editor time-of-day found."
@@ -316,11 +316,11 @@ msgstr ""
 
 #: src/editor/editor_palettes.cpp:532
 msgid "FG: "
-msgstr ""
+msgstr "ᚠᚷ: "
 
 #: src/editor/editor_palettes.cpp:533
 msgid "BG: "
-msgstr ""
+msgstr "ᛒᚷ: "
 
 #: src/editor/map_context.cpp:71
 msgid "File not found"
