--- a/po/wesnoth-manpages/ang.po
+++ b/po/wesnoth-manpages/ang.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: ang\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-01-06 12:00+0100\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
+"PO-Revision-Date: 2012-01-19 15:01-0500\n"
 "Last-Translator: Steven Panek (Espreon) <Majora700@gmail.com>\n"
 "Language-Team: Old English <http://wiki.wesnoth.org/OldEnglishTranslation>\n"
 "Language: ang\n"
@@ -21,31 +21,31 @@ msgstr ""
 #: ../../doc/man/wesnoth.6:16
 #, no-wrap
 msgid "WESNOTH"
-msgstr ""
+msgstr "WESNOTH"
 
 #. type: TH
 #: ../../doc/man/wesnoth.6:16 ../../doc/man/wesnothd.6:16
 #, no-wrap
 msgid "2011"
-msgstr ""
+msgstr "2011"
 
 #. type: TH
 #: ../../doc/man/wesnoth.6:16
 #, no-wrap
 msgid "wesnoth"
-msgstr ""
+msgstr "wesnoth"
 
 #. type: TH
 #: ../../doc/man/wesnoth.6:16
 #, no-wrap
 msgid "Battle for Wesnoth"
-msgstr ""
+msgstr "ᚹᛁᚷ ᚠᚩᚱ ᚹᛖᛋᚾᚩᚦ"
 
 #. type: SH
 #: ../../doc/man/wesnoth.6:18 ../../doc/man/wesnothd.6:18
 #, no-wrap
 msgid "NAME"
-msgstr ""
+msgstr "ᚾᚪᛗᚪ"
 
 #. type: Plain text
 #: ../../doc/man/wesnoth.6:20
@@ -91,13 +91,13 @@ msgstr ""
 #: ../../doc/man/wesnoth.6:43 ../../doc/man/wesnothd.6:45
 #, no-wrap
 msgid "OPTIONS"
-msgstr ""
+msgstr "ᚳᚩᛋᛏᚪᛋ"
 
 #. type: TP
 #: ../../doc/man/wesnoth.6:45
 #, no-wrap
 msgid "B<--bpp>I<\\ number>"
-msgstr ""
+msgstr "B<--bpp>I<\\ ᚱᛁᛗ>"
 
 #. type: Plain text
 #: ../../doc/man/wesnoth.6:49
@@ -150,7 +150,7 @@ msgstr ""
 #: ../../doc/man/wesnoth.6:60
 #, no-wrap
 msgid "B<--config-dir>I<\\ name>"
-msgstr ""
+msgstr "B<--config-dir>ᛁ<\\ ᚾᚪᛗᚪ>"
 
 #. type: Plain text
 #: ../../doc/man/wesnoth.6:67
@@ -165,7 +165,7 @@ msgstr ""
 #: ../../doc/man/wesnoth.6:67
 #, no-wrap
 msgid "B<--config-path>"
-msgstr ""
+msgstr "B<--config-path>"
 
 #. type: Plain text
 #: ../../doc/man/wesnoth.6:70
@@ -187,7 +187,7 @@ msgstr ""
 #: ../../doc/man/wesnoth.6:73
 #, no-wrap
 msgid "B<-d, --debug>"
-msgstr ""
+msgstr "B<-d, --debug>"
 
 #. type: Plain text
 #: ../../doc/man/wesnoth.6:77
@@ -213,7 +213,7 @@ msgstr ""
 #: ../../doc/man/wesnoth.6:83
 #, no-wrap
 msgid "B<--fps>"
-msgstr ""
+msgstr "B<--fps>"
 
 #. type: Plain text
 #: ../../doc/man/wesnoth.6:87
@@ -226,7 +226,7 @@ msgstr ""
 #: ../../doc/man/wesnoth.6:87
 #, no-wrap
 msgid "B<-f, --fullscreen>"
-msgstr ""
+msgstr "B<-f, --fullscreen>"
 
 #. type: Plain text
 #: ../../doc/man/wesnoth.6:90
@@ -263,7 +263,7 @@ msgstr ""
 #: ../../doc/man/wesnoth.6:102 ../../doc/man/wesnothd.6:55
 #, no-wrap
 msgid "B<-h, --help>"
-msgstr ""
+msgstr "B<-h, --help>"
 
 #. type: Plain text
 #: ../../doc/man/wesnoth.6:105
@@ -317,7 +317,7 @@ msgstr ""
 #: ../../doc/man/wesnoth.6:131
 #, no-wrap
 msgid "B<--max-fps>"
-msgstr ""
+msgstr "B<--max-fps>"
 
 #. type: Plain text
 #: ../../doc/man/wesnoth.6:136
@@ -330,7 +330,7 @@ msgstr ""
 #: ../../doc/man/wesnoth.6:136
 #, no-wrap
 msgid "B<-m, --multiplayer>"
-msgstr ""
+msgstr "B<-m, --multiplayer>"
 
 #. type: Plain text
 #: ../../doc/man/wesnoth.6:143
@@ -344,7 +344,7 @@ msgstr ""
 #: ../../doc/man/wesnoth.6:143
 #, no-wrap
 msgid "B<--no-delay>"
-msgstr ""
+msgstr "B<--no-delay>"
 
 #. type: Plain text
 #: ../../doc/man/wesnoth.6:147
@@ -357,7 +357,7 @@ msgstr ""
 #: ../../doc/man/wesnoth.6:147
 #, no-wrap
 msgid "B<--nocache>"
-msgstr ""
+msgstr "B<--nocache>"
 
 #. type: Plain text
 #: ../../doc/man/wesnoth.6:150
@@ -368,7 +368,7 @@ msgstr ""
 #: ../../doc/man/wesnoth.6:150
 #, no-wrap
 msgid "B<--nomusic>"
-msgstr ""
+msgstr "B<--nomusic>"
 
 #. type: Plain text
 #: ../../doc/man/wesnoth.6:153
@@ -379,7 +379,7 @@ msgstr ""
 #: ../../doc/man/wesnoth.6:153
 #, no-wrap
 msgid "B<--nosound>"
-msgstr ""
+msgstr "B<--nosound>"
 
 #. type: Plain text
 #: ../../doc/man/wesnoth.6:156
@@ -390,7 +390,7 @@ msgstr ""
 #: ../../doc/man/wesnoth.6:156
 #, no-wrap
 msgid "B<--path>"
-msgstr ""
+msgstr "B<--path>"
 
 #. type: Plain text
 #: ../../doc/man/wesnoth.6:159
@@ -474,7 +474,7 @@ msgstr ""
 #: ../../doc/man/wesnoth.6:191
 #, no-wrap
 msgid "B<--strict-validation>"
-msgstr ""
+msgstr "B<--strict-validation>"
 
 #. type: Plain text
 #: ../../doc/man/wesnoth.6:194
@@ -485,7 +485,7 @@ msgstr ""
 #: ../../doc/man/wesnoth.6:194
 #, no-wrap
 msgid "B<-t, --test>"
-msgstr ""
+msgstr "B<-t, --test>"
 
 #. type: Plain text
 #: ../../doc/man/wesnoth.6:197
@@ -496,7 +496,7 @@ msgstr ""
 #: ../../doc/man/wesnoth.6:197
 #, no-wrap
 msgid "B<--validcache>"
-msgstr ""
+msgstr "B<--validcache>"
 
 #. type: Plain text
 #: ../../doc/man/wesnoth.6:200
@@ -507,7 +507,7 @@ msgstr ""
 #: ../../doc/man/wesnoth.6:200
 #, no-wrap
 msgid "B<-v, --version>"
-msgstr ""
+msgstr "B<-v, --version>"
 
 #. type: Plain text
 #: ../../doc/man/wesnoth.6:203
@@ -518,7 +518,7 @@ msgstr ""
 #: ../../doc/man/wesnoth.6:203
 #, no-wrap
 msgid "B<-w, --windowed>"
-msgstr ""
+msgstr "B<-w, --windowed>"
 
 #. type: Plain text
 #: ../../doc/man/wesnoth.6:206
@@ -529,7 +529,7 @@ msgstr ""
 #: ../../doc/man/wesnoth.6:206
 #, no-wrap
 msgid "B<--with-replay>"
-msgstr ""
+msgstr "B<--with-replay>"
 
 #. type: Plain text
 #: ../../doc/man/wesnoth.6:211
@@ -605,7 +605,7 @@ msgstr ""
 #: ../../doc/man/wesnoth.6:242
 #, no-wrap
 msgid "B<--exit-at-end>"
-msgstr ""
+msgstr "B<--exit-at-end>"
 
 #. type: Plain text
 #: ../../doc/man/wesnoth.6:246
@@ -619,7 +619,7 @@ msgstr ""
 #: ../../doc/man/wesnoth.6:246
 #, no-wrap
 msgid "B<--nogui>"
-msgstr ""
+msgstr "B<--nogui>"
 
 #. type: Plain text
 #: ../../doc/man/wesnoth.6:251
@@ -751,19 +751,19 @@ msgstr ""
 #. type: Plain text
 #: ../../doc/man/wesnoth.6:297
 msgid "B<wesnothd>(6)."
-msgstr ""
+msgstr "B<wesnothd>(6)."
 
 #. type: TH
 #: ../../doc/man/wesnothd.6:16
 #, no-wrap
 msgid "WESNOTHD"
-msgstr ""
+msgstr "WESNOTHD"
 
 #. type: TH
 #: ../../doc/man/wesnothd.6:16
 #, no-wrap
 msgid "wesnothd"
-msgstr ""
+msgstr "wesnothd"
 
 #. type: TH
 #: ../../doc/man/wesnothd.6:16
@@ -778,15 +778,18 @@ msgstr ""
 
 #. type: Plain text
 #: ../../doc/man/wesnothd.6:36
+#, fuzzy
 msgid ""
 "B<wesnothd> [\\|B<-dv>\\|] [\\|B<-c> I<path>\\|] [\\|B<-p> I<port>\\|] [\\|"
 "B<-t> I<number>\\|] [\\|B<-T> I<number>\\|]"
 msgstr ""
+"ᛒ<wesnothd> [\\|ᛒ<-dv>\\|] [\\|ᛒ<-c> ᛁ<pæþ>\\|] [\\|ᛒ<-p> ᛁ<port>\\|] [\\|ᛒ<-"
+"t> ᛁ<rim>\\|] [\\|ᛒ<-T> ᛁ<rim>\\|]"
 
 #. type: Plain text
 #: ../../doc/man/wesnothd.6:39
 msgid "B<wesnothd> B<-V>"
-msgstr ""
+msgstr "B<wesnothd> B<-V>"
 
 #. type: Plain text
 #: ../../doc/man/wesnothd.6:44
@@ -814,7 +817,7 @@ msgstr ""
 #: ../../doc/man/wesnothd.6:52
 #, no-wrap
 msgid "B<-d, --daemon>"
-msgstr ""
+msgstr "B<-d, --daemon>"
 
 #. type: Plain text
 #: ../../doc/man/wesnothd.6:55
@@ -852,7 +855,7 @@ msgstr ""
 #: ../../doc/man/wesnothd.6:77
 #, no-wrap
 msgid "B<-t\\ >I<number>B<,\\ --threads>I<\\ number>"
-msgstr ""
+msgstr "B<-t\\ >ᛁ<ᚱᛁᛗ>B<,\\ --threads>ᛁ<\\ ᚱᛁᛗ>"
 
 #. type: Plain text
 #: ../../doc/man/wesnothd.6:81
@@ -865,7 +868,7 @@ msgstr ""
 #: ../../doc/man/wesnothd.6:81
 #, no-wrap
 msgid "B<-T\\ >I<number>B<,\\ --max-threads>I<\\ number>"
-msgstr ""
+msgstr "B<-T\\ >I<ᚱᛁᛗ>B<,\\ --max-threads>I<\\ ᚱᛁᛗ>"
 
 #. type: Plain text
 #: ../../doc/man/wesnothd.6:88
@@ -878,7 +881,7 @@ msgstr ""
 #: ../../doc/man/wesnothd.6:88
 #, no-wrap
 msgid "B<-V, --version>"
-msgstr ""
+msgstr "B<-V, --version>"
 
 #. type: Plain text
 #: ../../doc/man/wesnothd.6:91
@@ -889,7 +892,7 @@ msgstr ""
 #: ../../doc/man/wesnothd.6:91
 #, no-wrap
 msgid "B<-v, --verbose>"
-msgstr ""
+msgstr "B<-v, --verbose>"
 
 #. type: Plain text
 #: ../../doc/man/wesnothd.6:94
@@ -938,7 +941,7 @@ msgstr ""
 #: ../../doc/man/wesnothd.6:110
 #, no-wrap
 msgid "B<allow_remote_shutdown>"
-msgstr ""
+msgstr "B<allow_remote_shutdown>"
 
 #. type: Plain text
 #: ../../doc/man/wesnothd.6:114
@@ -952,7 +955,7 @@ msgstr ""
 #: ../../doc/man/wesnothd.6:114
 #, no-wrap
 msgid "B<ban_save_file>"
-msgstr ""
+msgstr "B<ban_save_file>"
 
 #. type: Plain text
 #: ../../doc/man/wesnothd.6:118
@@ -965,7 +968,7 @@ msgstr ""
 #: ../../doc/man/wesnothd.6:118
 #, no-wrap
 msgid "B<compress_stored_rooms>"
-msgstr ""
+msgstr "B<compress_stored_rooms>"
 
 #. type: Plain text
 #: ../../doc/man/wesnothd.6:121
@@ -978,7 +981,7 @@ msgstr ""
 #: ../../doc/man/wesnothd.6:121
 #, no-wrap
 msgid "B<connections_allowed>"
-msgstr ""
+msgstr "B<connections_allowed>"
 
 #. type: Plain text
 #: ../../doc/man/wesnothd.6:124
@@ -991,7 +994,7 @@ msgstr ""
 #: ../../doc/man/wesnothd.6:124
 #, no-wrap
 msgid "B<disallow_names>"
-msgstr ""
+msgstr "B<disallow_names>"
 
 #. type: Plain text
 #: ../../doc/man/wesnothd.6:131
@@ -1006,7 +1009,7 @@ msgstr ""
 #: ../../doc/man/wesnothd.6:131
 #, no-wrap
 msgid "B<fifo_path>"
-msgstr ""
+msgstr "B<fifo_path>"
 
 #. type: Plain text
 #: ../../doc/man/wesnothd.6:135
@@ -1020,7 +1023,7 @@ msgstr ""
 #: ../../doc/man/wesnothd.6:135
 #, no-wrap
 msgid "B<max_messages>"
-msgstr ""
+msgstr "B<max_messages>"
 
 #. type: Plain text
 #: ../../doc/man/wesnothd.6:138
@@ -1032,7 +1035,7 @@ msgstr ""
 #: ../../doc/man/wesnothd.6:138
 #, no-wrap
 msgid "B<messages_time_period>"
-msgstr ""
+msgstr "B<messages_time_period>"
 
 #. type: Plain text
 #: ../../doc/man/wesnothd.6:141
@@ -1045,7 +1048,7 @@ msgstr ""
 #: ../../doc/man/wesnothd.6:141
 #, no-wrap
 msgid "B<motd>"
-msgstr ""
+msgstr "B<motd>"
 
 #. type: Plain text
 #: ../../doc/man/wesnothd.6:144
@@ -1056,7 +1059,7 @@ msgstr ""
 #: ../../doc/man/wesnothd.6:144
 #, no-wrap
 msgid "B<new_room_policy>"
-msgstr ""
+msgstr "B<new_room_policy>"
 
 #. type: Plain text
 #: ../../doc/man/wesnothd.6:147
@@ -1071,7 +1074,7 @@ msgstr ""
 #: ../../doc/man/wesnothd.6:147
 #, no-wrap
 msgid "B<passwd>"
-msgstr ""
+msgstr "B<passwd>"
 
 #. type: Plain text
 #: ../../doc/man/wesnothd.6:150
@@ -1083,7 +1086,7 @@ msgstr ""
 #: ../../doc/man/wesnothd.6:150
 #, no-wrap
 msgid "B<replay_save_path>"
-msgstr ""
+msgstr "B<replay_save_path>"
 
 #. type: Plain text
 #: ../../doc/man/wesnothd.6:153
@@ -1097,7 +1100,7 @@ msgstr ""
 #: ../../doc/man/wesnothd.6:153
 #, no-wrap
 msgid "B<restart_command>"
-msgstr ""
+msgstr "B<restart_command>"
 
 #. type: Plain text
 #: ../../doc/man/wesnothd.6:156
@@ -1111,7 +1114,7 @@ msgstr ""
 #: ../../doc/man/wesnothd.6:156
 #, no-wrap
 msgid "B<room_save_file>"
-msgstr ""
+msgstr "B<room_save_file>"
 
 #. type: Plain text
 #: ../../doc/man/wesnothd.6:159
@@ -1125,7 +1128,7 @@ msgstr ""
 #: ../../doc/man/wesnothd.6:159
 #, no-wrap
 msgid "B<save_replays>"
-msgstr ""
+msgstr "B<save_replays>"
 
 #. type: Plain text
 #: ../../doc/man/wesnothd.6:162
@@ -1138,7 +1141,7 @@ msgstr ""
 #: ../../doc/man/wesnothd.6:162
 #, no-wrap
 msgid "B<versions_accepted>"
-msgstr ""
+msgstr "B<versions_accepted>"
 
 #. type: Plain text
 #: ../../doc/man/wesnothd.6:166
@@ -1157,7 +1160,7 @@ msgstr ""
 #: ../../doc/man/wesnothd.6:168
 #, no-wrap
 msgid "B<user_handler>"
-msgstr ""
+msgstr "B<user_handler>"
 
 #. type: Plain text
 #: ../../doc/man/wesnothd.6:173
@@ -1186,7 +1189,7 @@ msgstr ""
 #: ../../doc/man/wesnothd.6:180
 #, no-wrap
 msgid "B<host>"
-msgstr ""
+msgstr "B<host>"
 
 #. type: Plain text
 #: ../../doc/man/wesnothd.6:183
@@ -1197,7 +1200,7 @@ msgstr ""
 #: ../../doc/man/wesnothd.6:183
 #, no-wrap
 msgid "B<port>"
-msgstr ""
+msgstr "B<port>"
 
 #. type: Plain text
 #: ../../doc/man/wesnothd.6:186
@@ -1208,7 +1211,7 @@ msgstr ""
 #: ../../doc/man/wesnothd.6:186
 #, no-wrap
 msgid "B<version>"
-msgstr ""
+msgstr "B<version>"
 
 #. type: Plain text
 #: ../../doc/man/wesnothd.6:191
@@ -1228,7 +1231,7 @@ msgstr ""
 #: ../../doc/man/wesnothd.6:196
 #, no-wrap
 msgid "B<name>"
-msgstr ""
+msgstr "B<name>"
 
 #. type: Plain text
 #: ../../doc/man/wesnothd.6:199
@@ -1239,7 +1242,7 @@ msgstr ""
 #: ../../doc/man/wesnothd.6:199
 #, no-wrap
 msgid "B<time>"
-msgstr ""
+msgstr "B<time>"
 
 #. type: Plain text
 #: ../../doc/man/wesnothd.6:207
@@ -1272,7 +1275,7 @@ msgstr ""
 #: ../../doc/man/wesnothd.6:222
 #, no-wrap
 msgid "B<db_host>"
-msgstr ""
+msgstr "B<db_host>"
 
 #. type: Plain text
 #: ../../doc/man/wesnothd.6:225
@@ -1283,7 +1286,7 @@ msgstr ""
 #: ../../doc/man/wesnothd.6:225
 #, no-wrap
 msgid "B<db_name>"
-msgstr ""
+msgstr "B<db_name>"
 
 #. type: Plain text
 #: ../../doc/man/wesnothd.6:228
@@ -1294,7 +1297,7 @@ msgstr ""
 #: ../../doc/man/wesnothd.6:228
 #, no-wrap
 msgid "B<db_user>"
-msgstr ""
+msgstr "B<db_user>"
 
 #. type: Plain text
 #: ../../doc/man/wesnothd.6:231
@@ -1307,7 +1310,7 @@ msgstr ""
 #: ../../doc/man/wesnothd.6:231
 #, no-wrap
 msgid "B<db_password>"
-msgstr ""
+msgstr "B<db_password>"
 
 #. type: Plain text
 #: ../../doc/man/wesnothd.6:234
@@ -1318,7 +1321,7 @@ msgstr ""
 #: ../../doc/man/wesnothd.6:234
 #, no-wrap
 msgid "B<db_users_table>"
-msgstr ""
+msgstr "B<db_users_table>"
 
 #. type: Plain text
 #: ../../doc/man/wesnothd.6:237
@@ -1332,7 +1335,7 @@ msgstr ""
 #: ../../doc/man/wesnothd.6:237
 #, no-wrap
 msgid "B<db_extra_table>"
-msgstr ""
+msgstr "B<db_extra_table>"
 
 #. type: Plain text
 #: ../../doc/man/wesnothd.6:241
@@ -1348,7 +1351,7 @@ msgstr ""
 #: ../../doc/man/wesnothd.6:241
 #, no-wrap
 msgid "B<user_expiration>"
-msgstr ""
+msgstr "B<user_expiration>"
 
 #. type: Plain text
 #: ../../doc/man/wesnothd.6:244
@@ -1368,7 +1371,7 @@ msgstr ""
 #: ../../doc/man/wesnothd.6:249
 #, no-wrap
 msgid "B<server>"
-msgstr ""
+msgstr "B<server>"
 
 #. type: Plain text
 #: ../../doc/man/wesnothd.6:252
@@ -1379,7 +1382,7 @@ msgstr ""
 #: ../../doc/man/wesnothd.6:252
 #, no-wrap
 msgid "B<username>"
-msgstr ""
+msgstr "B<username>"
 
 #. type: Plain text
 #: ../../doc/man/wesnothd.6:255
@@ -1390,7 +1393,7 @@ msgstr ""
 #: ../../doc/man/wesnothd.6:255
 #, no-wrap
 msgid "B<password>"
-msgstr ""
+msgstr "B<password>"
 
 #. type: Plain text
 #: ../../doc/man/wesnothd.6:258
@@ -1401,7 +1404,7 @@ msgstr ""
 #: ../../doc/man/wesnothd.6:258
 #, no-wrap
 msgid "B<from_address>"
-msgstr ""
+msgstr "B<from_address>"
 
 #. type: Plain text
 #: ../../doc/man/wesnothd.6:261
@@ -1412,7 +1415,7 @@ msgstr ""
 #: ../../doc/man/wesnothd.6:261
 #, no-wrap
 msgid "B<mail_port>"
-msgstr ""
+msgstr "B<mail_port>"
 
 #. type: Plain text
 #: ../../doc/man/wesnothd.6:264
@@ -1439,4 +1442,7 @@ msgstr ""
 #. type: Plain text
 #: ../../doc/man/wesnothd.6:286
 msgid "B<wesnoth>(6)."
-msgstr ""
+msgstr "B<wesnoth>(6)."
+
+#~ msgid "B<--new-syntax>"
+#~ msgstr "B<--new-syntax>"
