--- a/po/wesnoth/ang.po
+++ b/po/wesnoth/ang.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: ang\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2012-01-06 11:47+0100\n"
-"PO-Revision-Date: 2011-12-15 23:22-0500\n"
+"POT-Creation-Date: 2012-01-08 18:12+0100\n"
+"PO-Revision-Date: 2012-01-19 15:53-0500\n"
 "Last-Translator: Steven Panek (Espreon) <Majora700@gmail.com>\n"
 "Language-Team: Old English <http://wiki.wesnoth.org/OldEnglishTranslation>\n"
 "Language: ang\n"
@@ -315,15 +315,13 @@ msgstr "ᚾᛁᚹᛖ ᛖᛝᛚᛁᛋᚳ"
 
 #. [about]
 #: data/core/about.cfg:1234
-#, fuzzy
 msgid "Afrikaans Translation"
-msgstr "ᚪᚠᚠᚱᛁᚳᚪᚾᛁᛋᚳᚢ ᚦᛇᛞᚾᛖᛋ"
+msgstr "ᚪᚠᚠᚱᛁᚳᚪᚾᛁᛋᚳ ᚷᛖᚦᛇᛞᚾᛖᛋ"
 
 #. [about]
 #: data/core/about.cfg:1254
-#, fuzzy
 msgid "Arabic Translation"
-msgstr "ᚪᚱᚪᛒᛁᛋᚳᚢ ᚦᛇᛞᚾᛖᛋ"
+msgstr "ᚪᚱᚪᛒᛁᛋᚳ ᚷᛖᚦᛇᛞᚾᛖᛋ"
 
 #. [about]
 #: data/core/about.cfg:1261
@@ -362,26 +360,25 @@ msgstr ""
 
 #. [about]
 #: data/core/about.cfg:1479
-#, fuzzy
 msgid "Danish Translation"
-msgstr "ᛞᛖᚾᛁᛋᚳᚢ ᚦᛇᛞᚾᛖᛋ"
+msgstr "ᛞᛖᚾᛁᛋᚳ ᚷᛖᚦᛇᛞᚾᛖᛋ"
 
 #. [about]
 #: data/core/about.cfg:1510
 msgid "Dutch Translation"
-msgstr ""
+msgstr "ᚾᛁᚦᛖᚱᛚᛖᚾᛞᛁᛋᚳ ᚷᛖᚦᛇᛞᚾᛖᛋ"
 
 #. [about]
 #: data/core/about.cfg:1574
 #, fuzzy
 msgid "English (GB) Translation"
-msgstr "ᚾᛁᚹᛖ ᛖᛝᛚᛁᛋᚳᚢ (ᚷᛒ) ᚦᛇᛞᚾᛖᛋ"
+msgstr "ᚾᛁᚹᛖ ᛖᛝᛚᛁᛋᚳ (ᚷᛒ) ᚷᛖᚦᛇᛞᚾᛖᛋ"
 
 #. [about]
 #: data/core/about.cfg:1596
 #, fuzzy
 msgid "English (Shaw) Translation"
-msgstr "ᚾᛁᚹᛖ ᛖᛝᛚᛁᛋᚳᚢ (ᛋᚻᚪᚹ) ᚦᛇᛞᚾᛖᛋ"
+msgstr "ᚾᛁᚹᛖ ᛖᛝᛚᛁᛋᚳ (ᛋᚻᚪᚹ) ᚷᛖᚦᛇᛞᚾᛖᛋ"
 
 #. [about]
 #: data/core/about.cfg:1620
@@ -400,9 +397,8 @@ msgstr ""
 
 #. [about]
 #: data/core/about.cfg:1659
-#, fuzzy
 msgid "Finnish Translation"
-msgstr "ᚠᛁᚾᚾᛁᛋᚳᚢ ᚦᛇᛞᚾᛖᛋ"
+msgstr "ᚠᛁᚾᚾᛁᛋᚳ ᚷᛖᚦᛇᛞᚾᛖᛋ"
 
 #. [about]
 #: data/core/about.cfg:1705
@@ -427,7 +423,7 @@ msgstr ""
 #. [about]
 #: data/core/about.cfg:1974
 msgid "Greek Translation"
-msgstr ""
+msgstr "ᚳᚱᛠᚳᛁᛋᚳ ᚷᛖᚦᛇᛞᚾᛖᛋ"
 
 #. [about]
 #: data/core/about.cfg:2011
@@ -441,9 +437,8 @@ msgstr ""
 
 #. [about]
 #: data/core/about.cfg:2085
-#, fuzzy
 msgid "Icelandic Translation"
-msgstr "ᛁᛋᛚᛖᚾᛞᛁᛋᚳᚢ ᚦᛇᛞᚾᛖᛋ"
+msgstr "ᛁᛋᛚᛖᚾᛞᛁᛋᚳ ᚷᛖᚦᛇᛞᚾᛖᛋ"
 
 #. [about]
 #: data/core/about.cfg:2095
@@ -452,20 +447,18 @@ msgstr ""
 
 #. [about]
 #: data/core/about.cfg:2118
-#, fuzzy
 msgid "Irish Translation"
-msgstr "ᛁᚱᛁᛋᚳᚢ ᚦᛇᛞᚾᛖᛋ"
+msgstr "ᛁᚱᛁᛋᚳ ᚷᛖᚦᛇᛞᚾᛖᛋ"
 
 #. [about]
 #: data/core/about.cfg:2125
 msgid "Italian Translation"
-msgstr ""
+msgstr "ᛁᛏᚪᛚᛁᛋᚳ ᚷᛖᚦᛇᛞᚾᛖᛋ"
 
 #. [about]
 #: data/core/about.cfg:2166
-#, fuzzy
 msgid "Japanese Translation"
-msgstr "ᛡᛈᚪᚾᛁᛋᚳᚢ ᚦᛇᛞᚾᛖᛋ"
+msgstr "ᛁᚪᛈᚪᚾᛁᛋᚳ ᚷᛖᚦᛇᛞᚾᛖᛋ"
 
 #. [about]
 #: data/core/about.cfg:2234
@@ -474,19 +467,18 @@ msgstr ""
 
 #. [about]
 #: data/core/about.cfg:2242
-#, fuzzy
 msgid "Latin Translation"
-msgstr "ᛚᚫᛞᛖᚾᚢ ᚦᛇᛞᚾᛖᛋ"
+msgstr "ᛚᚫᛞᛖᚾᚢ ᚷᛖᚦᛇᛞᚾᛖᛋ"
 
 #. [about]
 #: data/core/about.cfg:2269
 msgid "Latvian Translation"
-msgstr ""
+msgstr "ᛚᛖᛏᛏᛁᛋᚳ ᚷᛖᚦᛇᛞᚾᛖᛋ"
 
 #. [about]
 #: data/core/about.cfg:2280
 msgid "Lithuanian Translation"
-msgstr ""
+msgstr "ᛚᛁᚦᚦᚢᚪᚾᛁᛋᚳ ᚷᛖᚦᛇᛞᚾᛖᛋ"
 
 #. [about]
 #: data/core/about.cfg:2302
@@ -501,38 +493,38 @@ msgstr ""
 #. [about]
 #: data/core/about.cfg:2318
 msgid "Norwegian Translation"
-msgstr ""
+msgstr "ᚾᚩᚱᚦᛁᛋᚳ ᚷᛖᚦᛇᛞᚾᛖᛋ"
 
 #. [about]
 #: data/core/about.cfg:2343
+#, fuzzy
 msgid "Old English Translation"
-msgstr ""
+msgstr "ᛖᛝᛚᛁᛋᚳ ᚷᛖᚦᛇᛞᚾᛖᛋ"
 
 #. [about]
 #: data/core/about.cfg:2352
-#, fuzzy
 msgid "Polish Translation"
-msgstr "ᛈᚩᛚᛁᛋᚳᚢ ᚦᛇᛞᚾᛖᛋ"
+msgstr "ᛈᚩᛚᛁᛋᚳ ᚷᛖᚦᛇᛞᚾᛖᛋ"
 
 #. [about]
 #: data/core/about.cfg:2392
 msgid "Portuguese Translation"
-msgstr ""
+msgstr "ᛈᚩᚱᛏᚢᚷᛚᛁᛋᚳ ᚷᛖᚦᛇᛞᚾᛖᛋ"
 
 #. [about]
 #: data/core/about.cfg:2399
 msgid "Portuguese (Brazil) Translation"
-msgstr ""
+msgstr "ᛈᚩᚱᛏᚢᚷᛚᛁᛋᚳ (ᛒᚱᚪᛋᛁᛚ) ᚷᛖᚦᛇᛞᚾᛖᛋ"
 
 #. [about]
 #: data/core/about.cfg:2441
 msgid "Romanian Translation"
-msgstr ""
+msgstr "ᚱᚢᛗᚫᚾᛁᛋᚳ ᚷᛖᚦᛇᛞᚾᛖᛋ"
 
 #. [about]
 #: data/core/about.cfg:2449
 msgid "Russian Translation"
-msgstr ""
+msgstr "ᚱᚢᛋᛋᛁᚳ ᚷᛖᚦᛇᛞᚾᛖᛋ"
 
 #. [about]
 #: data/core/about.cfg:2531
@@ -551,20 +543,19 @@ msgstr ""
 
 #. [about]
 #: data/core/about.cfg:2592
-#, fuzzy
 msgid "Spanish Translation"
-msgstr "ᛋᛈᛇᚾᛁᛋᚳᚢ ᚦᛇᛞᚾᛖᛋ"
+msgstr "ᛋᛈᛇᚾᛁᛋᚳ ᚷᛖᚦᛇᛞᚾᛖᛋ"
 
 #. [about]
 #: data/core/about.cfg:2673
 msgid "Swedish Translation"
-msgstr ""
+msgstr "ᛋᚹᛇᚾᛁᛋᚳ ᚷᛖᚦᛇᛞᚾᛖᛋ"
 
 #. [about]
 #: data/core/about.cfg:2714
 #, fuzzy
 msgid "Turkish Translation"
-msgstr "ᛏᚢᚱᚳᛁᛋᚳᚢ ᚦᛇᛞᚾᛖᛋ"
+msgstr "ᛏᚢᚱᚳᛁᛋᚳᚢ ᚷᛖᚦᛇᛞᚾᛖᛋ"
 
 #. [about]
 #: data/core/about.cfg:2736
@@ -1491,10 +1482,11 @@ msgid ""
 msgstr ""
 
 #: data/core/macros/names.cfg:77
+#, fuzzy
 msgid ""
 "Bal,Cam,Corn,Del,Earl,El,Fox,Fren,Gel,Hel,Hex,Hol,Hox,Il,Kin,Nam,Nes,New,Ol,"
 "Old,Olf,Oul,Ox,Rock,Rook,Sal,Sam,Sed,Sel,Sen,Sil,Tal,Water,Wet,York"
-msgstr ""
+msgstr ", ,ᚳᚩᚱᚾ, ,ᛇᚱᛚ, ,ᚠᚩᛉ, ᚹᚫᛏᛖᚱ,ᚹᚫᛏ,ᛇᚠᚩᚱᚹᛁᚳ"
 
 #. [objective]: condition=lose
 #: data/core/macros/objective-utils.cfg:7
@@ -1587,6 +1579,7 @@ msgstr "ᛒᛚᚪᚹ"
 msgid "Green"
 msgstr "ᚷᚱᛖᚾᛖ"
 
+# TODO: try to find an English word for this...
 #. [color_range]: id=purple
 #. [color_range]: id=4
 #: data/core/team-colors.cfg:44 data/core/team-colors.cfg:101
@@ -1617,11 +1610,12 @@ msgstr "ᚷᛇᛚᚢᚻᚱᛠᛞ"
 msgid "White"
 msgstr "ᚻᚹᛁᛏ"
 
+# I guess we can call it 'blue-green'...
 #. [color_range]: id=teal
 #. [color_range]: id=9
 #: data/core/team-colors.cfg:74 data/core/team-colors.cfg:131
 msgid "Teal"
-msgstr ""
+msgstr "ᛒᛚᚪᚹᚷᚱᛖᚾᛖ"
 
 #. [language]
 #: data/english.cfg:3
@@ -1717,8 +1711,9 @@ msgstr ""
 
 #. [language]
 #: data/english.cfg:30
+#, fuzzy
 msgid "$name|bury,$name|ham,$name|ton,$name|bury"
-msgstr ""
+msgstr "$name|ᛒᚢᚱᚻ,$name|ᚻᚪᛗ,$name|ᛏᚢᚾ,$name|ᛒᚢᚱᚻ"
 
 #. [language]
 #: data/english.cfg:31
@@ -1733,38 +1728,49 @@ msgstr ""
 
 #. [language]
 #: data/english.cfg:33
+#, fuzzy
 msgid ""
 "$river|bridge,$river|bridge,$river|bridge,$name|ham,$name|bridge,$bridge|ham,"
 "$bridge|ton"
 msgstr ""
+"$river|ᛒᚱᚣᚳᚷ,$river|ᛒᚱᚣᚳᚷ,$river|ᛒᚱᚣᚳᚷ,$name|ᚻᚪᛗ,$name|ᛒᚱᚣᚳᚷ,$bridge|ᚻᚪᛗ,"
+"$bridge|ᛏᚢᚾ"
 
 #. [language]
 #: data/english.cfg:34
+#, fuzzy
 msgid "$name|ham,$name|ton,$name|field"
-msgstr ""
+msgstr "$name|ᚻᚪᛗ,$name|ᛏᚢᚾ,$name|ᚠᛖᛚᛞ"
 
+# TODO: do research on OE forest and woods names
 #. [language]
 #: data/english.cfg:35
+#, fuzzy
 msgid ""
 "$name|ham,$name|ton,$name|wood,$name Forest,$forest|wood,$forest|ham,$forest|"
 "ton"
 msgstr ""
+"$name|ᚻᚪᛗ,$name|ᛏᚢᚾ,$name|ᚹᚢᛞᚢ,$name ᚹᛠᛚᛞ,$forest|ᚹᚢᛞᚢ,$forest|ᚻᚪᛗ,$forest|"
+"ᛏᚢᚾ"
 
 #. [language]
 #: data/english.cfg:36
+#, fuzzy
 msgid "$name|ham,$name|bury,$name|ton,$name|hill,$name|crest"
-msgstr ""
+msgstr "$name|ᚻᚪᛗ,$name|ᛒᚢᚱᚻ,$name|ᛏᚢᚾ,$name|ᚻᚣᛚᛚ,"
 
 #. [language]
 #: data/english.cfg:37
+#, fuzzy
 msgid "$mountain|mont,$mountain|cliff,$mountain|bury,$mountain|ham"
-msgstr ""
+msgstr " ,$mountain|ᚳᛚᛁᚠ,$mountain|ᛒᚢᚱᚻ,$mountain|ᚻᚪᛗ"
 
 #. [language]
 #: data/english.cfg:38
+#, fuzzy
 msgid ""
 "$name|ham,$name|bury,$name|ton,$name|mont,$name|mont,$name|cliff,$name|cliff"
-msgstr ""
+msgstr "$name|ᚻᚪᛗ,$name|ᛒᚢᚱᚻ,$name|ᛏᚢᚾ, , , ,$name|ᚳᛚᛁᚠ,$name|ᚳᛚᛁᚠ"
 
 #. [language]
 #: data/english.cfg:39
@@ -1774,8 +1780,9 @@ msgstr ""
 
 #. [language]
 #: data/english.cfg:40
+#, fuzzy
 msgid "$name|bury,$name|ham,$name|ton,$swamp|bury,$swamp|ham,$swamp|ton,"
-msgstr ""
+msgstr "$name|ᛒᚢᚱᚻ,$name|ᚻᚪᛗ,$name|ᛏᚢᚾ,$swamp|ᛒᚢᚱᚻ,$swamp|ᚻᚪᛗ,$swamp|ᛏᚢᚾ"
 
 #. [language]
 #: data/english.cfg:43
@@ -1795,7 +1802,7 @@ msgstr ""
 #. [language]
 #: data/english.cfg:48
 msgid "pierce"
-msgstr ""
+msgstr "ᛋᛏᛁᚳᛖ"
 
 #. [language]
 #: data/english.cfg:49
@@ -1815,7 +1822,7 @@ msgstr "ᚳᛠᛚᛞ"
 #. [language]
 #: data/english.cfg:52
 msgid "arcane"
-msgstr ""
+msgstr "ᚱᚢᚾᛚᛁᚳ"
 
 #. [server]
 #: data/game_config.cfg:4
@@ -1829,13 +1836,19 @@ msgstr ""
 
 #. [fonts]
 #: data/hardwired/fonts.cfg:7
-msgid "DejaVuSans.ttf,Andagii.ttf,DroidSansJapanese.ttf,DroidSansFallbackFull.ttf,Junicode-Regular.ttf"
-msgstr "DejaVuSans.ttf,Andagii.ttf,DroidSansJapanese.ttf,DroidSansFallbackFull.ttf,Junicode-Regular.ttf"
+#, fuzzy
+#| msgid "DejaVuSans.ttf,Andagii.ttf,wqy-zenhei.ttc,Junicode-Regular.ttf"
+msgid ""
+"DejaVuSans.ttf,Andagii.ttf,DroidSansJapanese.ttf,DroidSansFallbackFull.ttf,"
+"Junicode-Regular.ttf"
+msgstr "DejaVuSans.ttf,Andagii.ttf,wqy-zenhei.ttc,Junicode-Regular.ttf"
 
 #. [fonts]
 #: data/hardwired/fonts.cfg:8
+#, fuzzy
+#| msgid "DejaVu Sans,Andagii,WenQuanYi Zen Hei,Junicode"
 msgid "DejaVu Sans,Andagii,Droid Sans Japanese,Droid Sans Fallback,Junicode"
-msgstr "DejaVu Sans,Andagii,Droid Sans Japanese,Droid Sans Fallback,Junicode"
+msgstr "DejaVu Sans,Andagii,WenQuanYi Zen Hei,Junicode"
 
 #. [tip]
 #: data/hardwired/tips.cfg:4
@@ -2421,11 +2434,11 @@ msgstr "ᚷᛖᚫᛏᚱᛖᛞᚢ"
 
 #: data/lua/wml-tags.lua:833 src/actions.cpp:1497
 msgid "female^slowed"
-msgstr ""
+msgstr "ᚷᛖᚪᛋᛚᚫᚹᛖᛞᚢ"
 
 #: data/lua/wml-tags.lua:833 src/actions.cpp:1497
 msgid "slowed"
-msgstr ""
+msgstr "ᚷᛖᚪᛋᛚᚫᚹᛖᛞ"
 
 #: data/lua/wml-tags.lua:834 src/actions.cpp:1502
 msgid "female^petrified"
@@ -2457,7 +2470,7 @@ msgstr ""
 
 #: data/lua/wml/objectives.lua:53
 msgid "Notes:"
-msgstr ""
+msgstr "ᚾᚩᛏᚪᛋ:"
 
 #: data/lua/wml/objectives.lua:71
 msgid "(%d turns left)"
@@ -2494,7 +2507,7 @@ msgstr ""
 #. [language]
 #: data/scenario-test.cfg:3152
 msgid "electrical"
-msgstr "ᚷᚪᛥᚠᚣᚱ"
+msgstr "ᚷᚪᛋᛏᚠᚣᚱ"
 
 #. [menu]: id=menu-main
 #: data/themes/default.cfg:121 data/themes/dfool.cfg:140
@@ -2616,7 +2629,7 @@ msgstr ""
 #. [menu]: id=button-stopreplay, type=image
 #: data/themes/macros.cfg:80
 msgid "Stop"
-msgstr "ᛥᚩᛈᛈᛡᚾ"
+msgstr "ᛋᛏᚩᛈᛈᛁᚪᚾ"
 
 #. [menu]: id=button-stopreplay, type=image
 #: data/themes/macros.cfg:81
@@ -2660,9 +2673,8 @@ msgstr ""
 
 #. [menu]: id=skip-animation, type=checkbox
 #: data/themes/macros.cfg:147
-#, fuzzy
 msgid "Skip animation"
-msgstr "ᛋᛈᛇᚾᛁᛋᚳᚢ ᚦᛇᛞᚾᛖᛋ"
+msgstr ""
 
 #: src/about.cpp:204 src/menu_events.cpp:325 src/menu_events.cpp:352
 #: src/statistics_dialog.cpp:114
@@ -2736,6 +2748,7 @@ msgid "Part of 'Units sighted! (...)' sentence^1 enemy"
 msgid_plural "$enemies enemy"
 msgstr[0] ""
 msgstr[1] ""
+msgstr[2] ""
 
 #: src/actions.cpp:2777
 msgid "Units sighted! ($friendphrase, $enemyphrase)"
@@ -3118,7 +3131,7 @@ msgstr ""
 
 #: src/attack_prediction_display.cpp:249
 msgid "Slowed"
-msgstr ""
+msgstr "ᚷᛖᚪᛋᛚᚫᚹᛖᛞ"
 
 #: src/attack_prediction_display.cpp:254 src/reports.cpp:802
 msgid "Total damage"
@@ -3273,9 +3286,8 @@ msgid "Moves: "
 msgstr ""
 
 #: src/dialogs.cpp:1124
-#, fuzzy
 msgid "KB"
-msgstr "ᚳᛒ"
+msgstr ""
 
 #: src/game_config.cpp:326
 msgid "Invalid color range: "
@@ -3359,7 +3371,7 @@ msgstr ""
 
 #: src/game_events.cpp:181
 msgid "Error: "
-msgstr ""
+msgstr "ᚷᛖᛋᚹᛖᚦᚱᚢᛝ: "
 
 #: src/game_events.cpp:184
 msgid "Warning: "
@@ -3413,7 +3425,7 @@ msgstr[1] ""
 
 #: src/gui/dialogs/lobby/lobby_data.cpp:306 src/multiplayer_lobby.cpp:560
 msgid "Fog"
-msgstr "ᛗᛁᛥ"
+msgstr "ᛗᛁᛋᛏ"
 
 #: src/gui/dialogs/lobby/lobby_data.cpp:309
 #: src/gui/dialogs/lobby/lobby_data.cpp:312 src/multiplayer_create.cpp:90
@@ -3427,8 +3439,9 @@ msgid "none"
 msgstr "ᚾᚪᚾ"
 
 #: src/gui/dialogs/lobby_player_info.cpp:98
+#, fuzzy
 msgid "In game:"
-msgstr ""
+msgstr "ᚩᚾ ᚷᚪᛗᛖᚾᛖ:"
 
 #: src/gui/dialogs/lobby_player_info.cpp:100
 msgid "(observing)"
@@ -3460,7 +3473,7 @@ msgstr "ᚦᚢ"
 
 #: src/gui/dialogs/lobby_player_info.cpp:147 src/multiplayer_create.cpp:560
 msgid "Error"
-msgstr ""
+msgstr "ᚷᛖᛋᚹᛖᚦᚱᚢᛝ"
 
 #: src/intro.cpp:44
 msgid "The End"
@@ -3680,7 +3693,7 @@ msgstr ""
 
 #: src/menu_events.cpp:513
 msgid "scenario settings^Fog"
-msgstr "ᛗᛁᛥ"
+msgstr "ᛗᛁᛋᛏ"
 
 #: src/menu_events.cpp:514
 msgid "scenario settings^Shroud"
@@ -3816,7 +3829,7 @@ msgstr ""
 
 #: src/menu_events.cpp:1858
 msgid "Search"
-msgstr ""
+msgstr "ᛋᛖᚳᚪᚾ"
 
 #: src/menu_events.cpp:2035
 msgid "This command is currently unavailable."
@@ -3840,7 +3853,7 @@ msgstr "[all|<ᚷᛖᛒᚩᛞᚢ>]"
 
 #: src/menu_events.cpp:2105
 msgid "Error:"
-msgstr ""
+msgstr "ᚷᛖᛋᚹᛖᚦᚱᚢᛝ:"
 
 #: src/menu_events.cpp:2111
 msgid "Missing argument $arg_id"
@@ -3895,8 +3908,6 @@ msgstr ""
 #: src/menu_events.cpp:2334 src/menu_events.cpp:2337 src/menu_events.cpp:2339
 #: src/menu_events.cpp:2341 src/menu_events.cpp:2343 src/menu_events.cpp:2370
 #: src/menu_events.cpp:2372 src/menu_events.cpp:2374 src/menu_events.cpp:2388
-#, fuzzy
-#| msgid "<nick>"
 msgid "<nickname>"
 msgstr "<ᛠᚳᚪᚾᚪᛗᚪ>"
 
@@ -4254,7 +4265,7 @@ msgstr ""
 
 #: src/menu_events.cpp:2680 src/menu_events.cpp:2689
 msgid "error"
-msgstr ""
+msgstr "ᚷᛖᛋᚹᛖᚦᚱᚢᛝ"
 
 #: src/menu_events.cpp:2687
 msgid "Unknown debug domain: '$domain'."
@@ -4264,9 +4275,11 @@ msgstr ""
 msgid "Switched domain: '$domain' to level: '$level'."
 msgstr ""
 
+# Should we append a dative -e to what's inside of $receiver?
 #: src/menu_events.cpp:2767
+#, fuzzy
 msgid "whisper to $receiver"
-msgstr ""
+msgstr "ᚻᚹᛁᛋᛈᚱᛁᚪᚾ ᛏᚩ $receiver"
 
 #: src/menu_events.cpp:2774 src/multiplayer_ui.cpp:542
 msgid "whisper: $sender"
@@ -4642,7 +4655,7 @@ msgstr ""
 
 #: src/multiplayer_connect.cpp:1117 src/reports.cpp:155 src/savegame.cpp:722
 msgid "Name: "
-msgstr "ᚾᚪᛗᚪ:"
+msgstr "ᚾᚪᛗᚪ: "
 
 #: src/multiplayer_connect.cpp:1521
 msgid "Network Player"
@@ -4674,7 +4687,7 @@ msgstr ""
 
 #: src/multiplayer_create.cpp:56 src/multiplayer_lobby.cpp:742
 msgid "Create Game"
-msgstr "ᚷᚪᛗᛖᚾ ᛗᚪᚳᛡᚾ"
+msgstr "ᚷᚪᛗᛖᚾ ᛗᚪᚳᛁᚪᚾ"
 
 #: src/multiplayer_create.cpp:69
 msgid "Time limit"
@@ -4686,7 +4699,7 @@ msgstr "ᚷᚪᛗᛖᚾᛖᛋ ᚾᚪᛗᚪ:"
 
 #: src/multiplayer_create.cpp:85
 msgid "Era:"
-msgstr ""
+msgstr "ᛁᛖᛚᛞᚢ:"
 
 #: src/multiplayer_create.cpp:86
 msgid "Map to play:"
@@ -4702,7 +4715,7 @@ msgstr ""
 
 #: src/multiplayer_create.cpp:89
 msgid "Fog of war"
-msgstr "ᚹᛁᚷᛖᛋ ᛗᛁᛥ"
+msgstr "ᚹᛁᚷᛖᛋ ᛗᛁᛋᛏ"
 
 #: src/multiplayer_create.cpp:91
 msgid "Observers"
@@ -4845,8 +4858,10 @@ msgid "Action bonus: "
 msgstr ""
 
 #: src/multiplayer_create.cpp:423
+#, fuzzy
+#| msgid "Village"
 msgid "Village gold: "
-msgstr ""
+msgstr "ᚦᚩᚱᛈ"
 
 #: src/multiplayer_create.cpp:429
 msgid "Experience modifier: "
@@ -4890,7 +4905,7 @@ msgstr ""
 
 #: src/multiplayer_lobby.cpp:744
 msgid "Preferences"
-msgstr "ᚳᚩᛥᚪᛋ"
+msgstr "ᚳᚩᛋᛏᚪᛋ"
 
 #: src/multiplayer_lobby.cpp:745
 msgid "Quit"
@@ -4914,7 +4929,7 @@ msgstr ""
 
 #: src/multiplayer_lobby.cpp:750
 msgid "Search:"
-msgstr ""
+msgstr "ᛋᛖᚳᚪᚾ:"
 
 #: src/multiplayer_lobby.cpp:758
 msgid "Skip quickly to the active turn when observing"
@@ -4996,8 +5011,9 @@ msgstr ""
 #: src/multiplayer_wait.cpp:518
 msgid "multiplayer_starting_gold^Gold"
 msgid_plural "multiplayer_starting_gold^Gold"
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "ᚷᚩᛚᛞ"
+msgstr[1] "ᚷᚩᛚᛞ"
+msgstr[2] "ᚷᚩᛚᛞ"
 
 #: src/network.cpp:109
 msgid "invalid network handle"
@@ -5132,7 +5148,7 @@ msgstr ""
 
 #: src/playsingle_controller.cpp:269
 msgid "Gold: "
-msgstr "ᚷᚩᛚᛞ:"
+msgstr "ᚷᚩᛚᛞ: "
 
 #: src/playsingle_controller.cpp:273
 msgid "Carry over percentage: "
@@ -5260,7 +5276,7 @@ msgstr ""
 
 #: src/reports.cpp:309
 msgid "slowed: "
-msgstr ""
+msgstr "ᚷᛖᚪᛋᛚᚫᚹᛖᛞ: "
 
 #: src/reports.cpp:310
 msgid ""
@@ -5348,7 +5364,7 @@ msgstr "ᛚᚪᛞᛋᚳᛁᛈᛖ: "
 
 #: src/reports.cpp:614
 msgid "Slowed: "
-msgstr ""
+msgstr "ᚷᛖᚪᛋᛚᚫᚹᛖᛞ: "
 
 #: src/reports.cpp:618
 msgid "Attacks: "
@@ -5753,10 +5769,8 @@ msgid "female^lawful"
 msgstr ""
 
 #: src/unit_types.cpp:977
-#, fuzzy
-#| msgid "female^poisoned"
 msgid "female^liminal"
-msgstr "ᚷᛖᚫᛏᚱᛖᛞᚢ"
+msgstr ""
 
 #: src/unit_types.cpp:977
 msgid "female^neutral"
@@ -5796,14 +5810,14 @@ msgstr ""
 #~ msgid "High Lord"
 #~ msgstr "ᚻᛠᚻ ᚻᛚᚪᚠᚩᚱᛞ"
 
-#, fuzzy
+#~ msgid "Enemies"
+#~ msgstr "ᚷᛖᚹᛁᚾᚾᚪᚾ"
+
 #~ msgid "B"
 #~ msgstr "ᛒ"
 
-#, fuzzy
 #~ msgid "MB"
 #~ msgstr "ᛗᛒ"
 
-#, fuzzy
 #~ msgid "GB"
 #~ msgstr "ᚷᛒ"
