--- a/po/wesnoth-manpages/ang@latin.po
+++ b/po/wesnoth-manpages/ang@latin.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: ang@latin\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-01-06 12:00+0100\n"
-"PO-Revision-Date: 2011-07-08 19:41-0500\n"
+"PO-Revision-Date: 2012-01-14 23:18-0500\n"
 "Last-Translator: Steven Panek (Espreon) <Majora700@gmail.com>\n"
 "Language-Team: Old English <http://wiki.wesnoth.org/OldEnglishTranslation>\n"
 "Language: ang@latin\n"
@@ -21,7 +21,7 @@ msgstr ""
 #: ../../doc/man/wesnoth.6:16
 #, no-wrap
 msgid "WESNOTH"
-msgstr "ǷESNOÞ"
+msgstr "WESNOTH"
 
 #. type: TH
 #: ../../doc/man/wesnoth.6:16 ../../doc/man/wesnothd.6:16
@@ -474,7 +474,7 @@ msgstr ""
 #: ../../doc/man/wesnoth.6:191
 #, no-wrap
 msgid "B<--strict-validation>"
-msgstr ""
+msgstr "B<--strict-validation>"
 
 #. type: Plain text
 #: ../../doc/man/wesnoth.6:194
@@ -751,19 +751,19 @@ msgstr ""
 #. type: Plain text
 #: ../../doc/man/wesnoth.6:297
 msgid "B<wesnothd>(6)."
-msgstr ""
+msgstr "B<wesnothd>(6)."
 
 #. type: TH
 #: ../../doc/man/wesnothd.6:16
 #, no-wrap
 msgid "WESNOTHD"
-msgstr ""
+msgstr "WESNOTHD"
 
 #. type: TH
 #: ../../doc/man/wesnothd.6:16
 #, no-wrap
 msgid "wesnothd"
-msgstr ""
+msgstr "wesnothd"
 
 #. type: TH
 #: ../../doc/man/wesnothd.6:16
@@ -789,7 +789,7 @@ msgstr ""
 #. type: Plain text
 #: ../../doc/man/wesnothd.6:39
 msgid "B<wesnothd> B<-V>"
-msgstr ""
+msgstr "B<wesnothd> B<-V>"
 
 #. type: Plain text
 #: ../../doc/man/wesnothd.6:44
@@ -941,7 +941,7 @@ msgstr ""
 #: ../../doc/man/wesnothd.6:110
 #, no-wrap
 msgid "B<allow_remote_shutdown>"
-msgstr ""
+msgstr "B<allow_remote_shutdown>"
 
 #. type: Plain text
 #: ../../doc/man/wesnothd.6:114
@@ -955,7 +955,7 @@ msgstr ""
 #: ../../doc/man/wesnothd.6:114
 #, no-wrap
 msgid "B<ban_save_file>"
-msgstr ""
+msgstr "B<ban_save_file>"
 
 #. type: Plain text
 #: ../../doc/man/wesnothd.6:118
@@ -968,7 +968,7 @@ msgstr ""
 #: ../../doc/man/wesnothd.6:118
 #, no-wrap
 msgid "B<compress_stored_rooms>"
-msgstr ""
+msgstr "B<compress_stored_rooms>"
 
 #. type: Plain text
 #: ../../doc/man/wesnothd.6:121
@@ -981,7 +981,7 @@ msgstr ""
 #: ../../doc/man/wesnothd.6:121
 #, no-wrap
 msgid "B<connections_allowed>"
-msgstr ""
+msgstr "B<connections_allowed>"
 
 #. type: Plain text
 #: ../../doc/man/wesnothd.6:124
@@ -994,7 +994,7 @@ msgstr ""
 #: ../../doc/man/wesnothd.6:124
 #, no-wrap
 msgid "B<disallow_names>"
-msgstr ""
+msgstr "B<disallow_names>"
 
 #. type: Plain text
 #: ../../doc/man/wesnothd.6:131
@@ -1009,7 +1009,7 @@ msgstr ""
 #: ../../doc/man/wesnothd.6:131
 #, no-wrap
 msgid "B<fifo_path>"
-msgstr ""
+msgstr "B<fifo_path>"
 
 #. type: Plain text
 #: ../../doc/man/wesnothd.6:135
@@ -1023,7 +1023,7 @@ msgstr ""
 #: ../../doc/man/wesnothd.6:135
 #, no-wrap
 msgid "B<max_messages>"
-msgstr ""
+msgstr "B<max_messages>"
 
 #. type: Plain text
 #: ../../doc/man/wesnothd.6:138
@@ -1035,7 +1035,7 @@ msgstr ""
 #: ../../doc/man/wesnothd.6:138
 #, no-wrap
 msgid "B<messages_time_period>"
-msgstr ""
+msgstr "B<messages_time_period>"
 
 #. type: Plain text
 #: ../../doc/man/wesnothd.6:141
@@ -1048,7 +1048,7 @@ msgstr ""
 #: ../../doc/man/wesnothd.6:141
 #, no-wrap
 msgid "B<motd>"
-msgstr ""
+msgstr "B<motd>"
 
 #. type: Plain text
 #: ../../doc/man/wesnothd.6:144
@@ -1059,7 +1059,7 @@ msgstr ""
 #: ../../doc/man/wesnothd.6:144
 #, no-wrap
 msgid "B<new_room_policy>"
-msgstr ""
+msgstr "B<new_room_policy>"
 
 #. type: Plain text
 #: ../../doc/man/wesnothd.6:147
@@ -1074,7 +1074,7 @@ msgstr ""
 #: ../../doc/man/wesnothd.6:147
 #, no-wrap
 msgid "B<passwd>"
-msgstr ""
+msgstr "B<passwd>"
 
 #. type: Plain text
 #: ../../doc/man/wesnothd.6:150
@@ -1086,7 +1086,7 @@ msgstr ""
 #: ../../doc/man/wesnothd.6:150
 #, no-wrap
 msgid "B<replay_save_path>"
-msgstr ""
+msgstr "B<replay_save_path>"
 
 #. type: Plain text
 #: ../../doc/man/wesnothd.6:153
@@ -1100,7 +1100,7 @@ msgstr ""
 #: ../../doc/man/wesnothd.6:153
 #, no-wrap
 msgid "B<restart_command>"
-msgstr ""
+msgstr "B<restart_command>"
 
 #. type: Plain text
 #: ../../doc/man/wesnothd.6:156
@@ -1114,7 +1114,7 @@ msgstr ""
 #: ../../doc/man/wesnothd.6:156
 #, no-wrap
 msgid "B<room_save_file>"
-msgstr ""
+msgstr "B<room_save_file>"
 
 #. type: Plain text
 #: ../../doc/man/wesnothd.6:159
@@ -1128,7 +1128,7 @@ msgstr ""
 #: ../../doc/man/wesnothd.6:159
 #, no-wrap
 msgid "B<save_replays>"
-msgstr ""
+msgstr "B<save_replays>"
 
 #. type: Plain text
 #: ../../doc/man/wesnothd.6:162
@@ -1141,7 +1141,7 @@ msgstr ""
 #: ../../doc/man/wesnothd.6:162
 #, no-wrap
 msgid "B<versions_accepted>"
-msgstr ""
+msgstr "B<versions_accepted>"
 
 #. type: Plain text
 #: ../../doc/man/wesnothd.6:166
@@ -1160,7 +1160,7 @@ msgstr ""
 #: ../../doc/man/wesnothd.6:168
 #, no-wrap
 msgid "B<user_handler>"
-msgstr ""
+msgstr "B<user_handler>"
 
 #. type: Plain text
 #: ../../doc/man/wesnothd.6:173
@@ -1189,7 +1189,7 @@ msgstr ""
 #: ../../doc/man/wesnothd.6:180
 #, no-wrap
 msgid "B<host>"
-msgstr ""
+msgstr "B<host>"
 
 #. type: Plain text
 #: ../../doc/man/wesnothd.6:183
@@ -1200,7 +1200,7 @@ msgstr ""
 #: ../../doc/man/wesnothd.6:183
 #, no-wrap
 msgid "B<port>"
-msgstr ""
+msgstr "B<port>"
 
 #. type: Plain text
 #: ../../doc/man/wesnothd.6:186
@@ -1211,7 +1211,7 @@ msgstr ""
 #: ../../doc/man/wesnothd.6:186
 #, no-wrap
 msgid "B<version>"
-msgstr ""
+msgstr "B<version>"
 
 #. type: Plain text
 #: ../../doc/man/wesnothd.6:191
@@ -1231,7 +1231,7 @@ msgstr ""
 #: ../../doc/man/wesnothd.6:196
 #, no-wrap
 msgid "B<name>"
-msgstr "B<nama>"
+msgstr "B<name>"
 
 #. type: Plain text
 #: ../../doc/man/wesnothd.6:199
@@ -1242,7 +1242,7 @@ msgstr ""
 #: ../../doc/man/wesnothd.6:199
 #, no-wrap
 msgid "B<time>"
-msgstr "B<tima>"
+msgstr "B<time>"
 
 #. type: Plain text
 #: ../../doc/man/wesnothd.6:207
@@ -1275,7 +1275,7 @@ msgstr ""
 #: ../../doc/man/wesnothd.6:222
 #, no-wrap
 msgid "B<db_host>"
-msgstr ""
+msgstr "B<db_host>"
 
 #. type: Plain text
 #: ../../doc/man/wesnothd.6:225
@@ -1286,7 +1286,7 @@ msgstr ""
 #: ../../doc/man/wesnothd.6:225
 #, no-wrap
 msgid "B<db_name>"
-msgstr ""
+msgstr "B<db_name>"
 
 #. type: Plain text
 #: ../../doc/man/wesnothd.6:228
@@ -1297,7 +1297,7 @@ msgstr ""
 #: ../../doc/man/wesnothd.6:228
 #, no-wrap
 msgid "B<db_user>"
-msgstr ""
+msgstr "B<db_user>"
 
 #. type: Plain text
 #: ../../doc/man/wesnothd.6:231
@@ -1310,7 +1310,7 @@ msgstr ""
 #: ../../doc/man/wesnothd.6:231
 #, no-wrap
 msgid "B<db_password>"
-msgstr ""
+msgstr "B<db_password>"
 
 #. type: Plain text
 #: ../../doc/man/wesnothd.6:234
@@ -1321,7 +1321,7 @@ msgstr ""
 #: ../../doc/man/wesnothd.6:234
 #, no-wrap
 msgid "B<db_users_table>"
-msgstr ""
+msgstr "B<db_users_table>"
 
 #. type: Plain text
 #: ../../doc/man/wesnothd.6:237
@@ -1335,7 +1335,7 @@ msgstr ""
 #: ../../doc/man/wesnothd.6:237
 #, no-wrap
 msgid "B<db_extra_table>"
-msgstr ""
+msgstr "B<db_extra_table>"
 
 #. type: Plain text
 #: ../../doc/man/wesnothd.6:241
@@ -1351,7 +1351,7 @@ msgstr ""
 #: ../../doc/man/wesnothd.6:241
 #, no-wrap
 msgid "B<user_expiration>"
-msgstr ""
+msgstr "B<user_expiration>"
 
 #. type: Plain text
 #: ../../doc/man/wesnothd.6:244
@@ -1371,7 +1371,7 @@ msgstr ""
 #: ../../doc/man/wesnothd.6:249
 #, no-wrap
 msgid "B<server>"
-msgstr ""
+msgstr "B<server>"
 
 #. type: Plain text
 #: ../../doc/man/wesnothd.6:252
@@ -1382,7 +1382,7 @@ msgstr ""
 #: ../../doc/man/wesnothd.6:252
 #, no-wrap
 msgid "B<username>"
-msgstr ""
+msgstr "B<username>"
 
 #. type: Plain text
 #: ../../doc/man/wesnothd.6:255
@@ -1393,7 +1393,7 @@ msgstr ""
 #: ../../doc/man/wesnothd.6:255
 #, no-wrap
 msgid "B<password>"
-msgstr ""
+msgstr "B<password>"
 
 #. type: Plain text
 #: ../../doc/man/wesnothd.6:258
@@ -1404,7 +1404,7 @@ msgstr ""
 #: ../../doc/man/wesnothd.6:258
 #, no-wrap
 msgid "B<from_address>"
-msgstr ""
+msgstr "B<from_address>"
 
 #. type: Plain text
 #: ../../doc/man/wesnothd.6:261
@@ -1415,7 +1415,7 @@ msgstr ""
 #: ../../doc/man/wesnothd.6:261
 #, no-wrap
 msgid "B<mail_port>"
-msgstr ""
+msgstr "B<mail_port>"
 
 #. type: Plain text
 #: ../../doc/man/wesnothd.6:264
@@ -1442,4 +1442,7 @@ msgstr ""
 #. type: Plain text
 #: ../../doc/man/wesnothd.6:286
 msgid "B<wesnoth>(6)."
-msgstr ""
+msgstr "B<wesnoth>(6)."
+
+#~ msgid "B<--new-syntax>"
+#~ msgstr "B<--new-syntax>"
