Updated the Latin translation.

--- a/po/wesnoth-low/la.po
+++ b/po/wesnoth-low/la.po
@@ -12,8 +12,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: wescamp-i 18n\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2012-01-08 18:06+0100\n"
-"PO-Revision-Date: 2012-01-04 01:34+0100\n"
+"POT-Creation-Date: 2012-01-08 18:12+0100\n"
+"PO-Revision-Date: 2012-01-09 23:17+0100\n"
 "Last-Translator: Thomas Hockings <elprofesh@gmail.com>\n"
 "Language-Team: Latin <http://wiki.wesnoth.org/LatinTranslation>\n"
 "Language: la\n"
@@ -1161,7 +1161,7 @@ msgid ""
 "may be expecting at the beginning of this scenario, as you will not start "
 "with Kalenz’s army."
 msgstr ""
-"Tabulam evocatorum dissimilem et acervum auri pro initio habebis quam "
+"Tabulam evocatorum dissimilem et acervum aureorum pro initio habebis quam "
 "scaenario incepto expectares, quia non cum exercitu Calentis incipies."
 
 #. [message]: id=Kalenz
@@ -1321,7 +1321,7 @@ msgid ""
 "More elves are coming! Too late, we’ve taken all your gold and we’ll get "
 "more gold from the orcs for helping them out!"
 msgstr ""
-"Plures dryadalium veniunt! Serum est, omne aurum cepimus ac orcibus iuvando "
+"Plures dryadalium veniunt! Serum est, omne auri cepimus ac orcibus iuvando "
 "plus adipiscemur! "
 
 #. [message]: id=Kalenz
@@ -1418,7 +1418,7 @@ msgid ""
 "The war with the Orcs goes poorly. The Ka’lian will need that gold back to "
 "buy arms and food, to hire artisans, to support its armies."
 msgstr ""
-"Bellum contra Orces male est. Calianis aurum requirit ut arma cibumque emat "
+"Bellum contra Orces male est. Calianis aureos requirit ut arma cibumque emat "
 "et fabros conducant, causa exercitus iuvandi."
 
 #. [message]: id=Kalenz
@@ -1564,8 +1564,8 @@ msgid ""
 "not escape."
 msgstr ""
 "Totum thesauri nostri ceperunt! Agite, insidiatores ponite ad Vesmerem ab "
-"hoc loco in viis omnibus. D auri occisori ducis dabo. Illis non fugiendum "
-"est. "
+"hoc loco in viis omnibus. D aureorum occisori ducis dabo. Illis non "
+"fugiendum est. "
 
 # Exitus acta probat is from Ovid's Heroides
 #. [message]: id=Kalenz
@@ -1731,7 +1731,7 @@ msgid ""
 "cover our flank to the north, I will pay you 400 gold."
 msgstr ""
 "Mox erit in Vesmere proelium cum orcibus magnum. Si latus nostrum texeris, "
-"CD auri tibi dabo."
+"CD aureorum tibi dabo."
 
 # legibus for conditions is ante-classical
 #. [message]: id=Olurf
@@ -1750,7 +1750,7 @@ msgstr ""
 msgid ""
 "What? Kalenz, are you out of your mind? Surely you will not throw away 400 "
 "gold on this scheming mercenary!"
-msgstr "Quid? Calens, es amens? Num CD auri isti latroni asto dimittes?"
+msgstr "Quid? Calens, es amens? Num CD aureorum isti latroni asto dimittes?"
 
 #. [message]: id=Olurf
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter2/06_Acquaintance_in_Need.cfg:330
@@ -1758,8 +1758,8 @@ msgid ""
 "Where there’s a contract, our honor is involved. We will be there to cover "
 "your northern flank or else I will return your gold!"
 msgstr ""
-"Ubi foedus, ibi honor pertinet. Aderimus latus in aquilone tectum aut aurum "
-"tuum restituam!"
+"Ubi foedus, ibi honor pertinet. Aderimus latus in aquilone tectum aut aureos "
+"tui restituam!"
 
 #. [message]: id=Cleodil
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter2/06_Acquaintance_in_Need.cfg:334
@@ -2173,7 +2173,7 @@ msgstr ""
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter2/07_Elves_Last_Stand_utils.cfg:115
 msgid "Olurf, is that all the dwarves you could find? Was the gold not enough?"
 msgstr ""
-"Olurfi, omnesne sunt hi nanorum, quos invenire poteras? Aurumne non satis "
+"Olurfi, omnesne sunt hi nanorum, quos invenire poteras? Aureine non satis "
 "erant? "
 
 #. [message]: id=Olurf
@@ -2189,7 +2189,7 @@ msgstr ""
 #. [message]: id=Landar
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter2/07_Elves_Last_Stand_utils.cfg:123
 msgid "In a few days? That’s too late! We want our gold back!"
-msgstr "Paucis diebus? Serum sit! Volumus aurum rediri!"
+msgstr "Paucis diebus? Serum sit! Volumus aureos rediri!"
 
 #. [message]: id=Olurf
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter2/07_Elves_Last_Stand_utils.cfg:127
@@ -2472,7 +2472,7 @@ msgid ""
 "Very well. We shall leave our best troops and gold here in case the Orcs "
 "attack Wesmere again."
 msgstr ""
-"Fiat. Nostros et aurum hic relinquemus, quoniam Orces iterum Vesmerem "
+"Fiat. Nostros et aureos hic relinquemus, quoniam Orces iterum Vesmerem "
 "oppugnent."
 
 #. [part]
@@ -5540,7 +5540,7 @@ msgstr "Heu! Seri sumus..."
 #. [message]: speaker=narrator
 #: data/campaigns/Legend_of_Wesmere/utils/low-macros.cfg:43
 msgid "You retrieve $amount_gold pieces of gold."
-msgstr "$amount_gold nummos auri recipis."
+msgstr "$amount_gold aureorum recipis."
 
 #~ msgid "2p MC — LoW, Hard Mode, Chapter five"
 #~ msgstr "IIl MPL — HFV, Modus Difficilis, Liber V"
