--- a/po/wesnoth-units/la.po
+++ b/po/wesnoth-units/la.po
@@ -1,18 +1,19 @@
 # Latin translations for Battle for Wesnoth package.
 # Copyright (C) 2009 Wesnoth development team
 # This file is distributed under the same license as the Battle for Wesnoth package
+#
 # Current Translators:
-# Michael Babich (Aethaeryn) <michaelbabich7@gmail.com> - Maintainer
-# Thomas Hockings (Deusite) <elprofesh@gmail.com>
+#   Michael Babich (Aethaeryn) <michaelbabich7@gmail.com> - Maintainer
+#   Thomas Hockings (Deusite) <elprofesh@gmail.com>
+#   Drakefriend
+#
 # Former Translators:
-# Mark Polo (mpolo) <markpolo@gmail.com>
-# Drakefriend, 2011.
-# Drakefriend, 2011.
+#   Mark Polo (mpolo) <markpolo@gmail.com>
 msgid ""
 msgstr ""
 "Project-Id-Version: Wesnoth Latin 1.2\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2012-01-08 18:12+0100\n"
+"POT-Creation-Date: 2011-12-15 10:39+0100\n"
 "PO-Revision-Date: 2012-01-15 10:10+0100\n"
 "Last-Translator: Thomas Hockings <elprofesh@gmail.com>\n"
 "Language-Team: Latin <http://wiki.wesnoth.org/LatinTranslation>\n"
