Updated the Old English translation.

--- a/po/wesnoth/ang@latin.po
+++ b/po/wesnoth/ang@latin.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: ang@latin\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-01-08 18:12+0100\n"
-"PO-Revision-Date: 2012-01-19 15:45-0500\n"
+"PO-Revision-Date: 2012-01-19 17:15-0500\n"
 "Last-Translator: Steven Panek (Espreon) <Majora700@gmail.com>\n"
 "Language-Team: Old English <http://wiki.wesnoth.org/OldEnglishTranslation>\n"
 "Language: ang@latin\n"
@@ -3349,7 +3349,7 @@ msgstr ""
 
 #: src/game_controller.cpp:1077 src/game_controller_abstract.cpp:99
 msgid "The Battle for Wesnoth"
-msgstr "Ðæt Ƿig for Ƿesnoþ"
+msgstr "Þæt Ƿig for Ƿesnoþ"
 
 #: src/game_controller.cpp:1196
 msgid "The following add-on had errors and could not be loaded:"
