--- a/po/wesnoth-tutorial/es.po
+++ b/po/wesnoth-tutorial/es.po
@@ -17,7 +17,7 @@ msgstr ""
 "Project-Id-Version: es\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-01-06 11:47+0100\n"
-"PO-Revision-Date: 2012-01-06 19:52-0500\n"
+"PO-Revision-Date: 2012-01-19 20:15-0500\n"
 "Last-Translator: Steven Panek (Espreon) <Majora700@gmail.com>\n"
 "Language-Team: Spanish <http://wiki.wesnoth.org/SpanishTranslation>\n"
 "Language: es\n"
@@ -1999,8 +1999,8 @@ msgid ""
 "Delfador are characters from <i>Heir to the Throne</i>."
 msgstr ""
 "¡Has vencido! Ahora, quizá quieras probar una de las campañas de nivel "
-"principiante, como: <i>La guardia del sur</i>, <i>Una incursión de orcos<i/"
-">, <i>Un cuento sobre dos hermanos<i/> o <i>Heredero al trono<i/>. <i>La "
+"principiante, como: <i>La guardia del sur</i>, <i>Una incursión orca<i/>, "
+"<i>Un cuento sobre dos hermanos<i/> o <i>Heredero al trono<i/>. <i>La "
 "guardia del sur<i/> fue diseñada específicamente como una campaña para "
 "principiantes. Konrad, Li’sar y Delfador son personajes de <i>Heredero al "
 "trono<i/>."
